--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,37 @@
-version: '3'
+version : '3'
 
 services:
   nginx:
-    image: nginx:latest
-    container_name: nginx
+    image: nginx:1.22-alpine
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
-      - ./code:/code  # Assurez-vous que le dossier contenant vos fichiers PHP est monté dans /code
-      - ./nginx.conf:/etc/nginx/nginx.conf  # Utilisation de votre configuration Nginx
-    depends_on:
-      - php
-
+      - ./code:/code
+      - ./nginx.conf:/etc/nginx/nginx.conf
   php:
-    image: php:7.4-fpm
-    container_name: php
+    # image: php:8.3-fpm-alpine
+    build: .
     volumes:
-      - ./code:/code  # Assurez-vous que vos fichiers PHP sont accessibles dans le conteneur PHP
+      - ./code:/code
+  mysql:
+    image: mysql:8
+    environment:
+      # 🚨 Changer si vous utilisez cette configuration en production
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: appdb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - dbdata:/var/lib/mysql 
+    ports:
+      - "3306:3306"  # Expose port 3306
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "8081:80"
+
+volumes: 
+  dbdata:   # volume managé pour sauvegarder la bdd en local
